--- a/.github/workflows/repackage.yml
+++ b/.github/workflows/repackage.yml
@@ -95,5 +95,5 @@ jobs:
     - name: Release
       uses: softprops/action-gh-release@v2
       with:
-        tag: "${{ env.PACKAGE_NAME }}-v${{ steps.version.outputs.version }}"
+        tag_name: "${{ env.PACKAGE_NAME }}-v${{ steps.version.outputs.version }}"
         files: "${{ steps.filename.outputs.filename }}"
