--- a/.github/workflows/repackage.yml
+++ b/.github/workflows/repackage.yml
@@ -28,7 +28,7 @@ jobs:
         
     - name: Download package sources
       run: |
-        curl -sL -o Packages --parallel --parallel-immediate $(sed -e 's!^!${{ env.REPOSITORY_URL }}/dists/${{ env.REPOSITORY_DIST }}/!g' Sources)
+        curl -sL --parallel --parallel-immediate $(sed -e 's!^!${{ env.REPOSITORY_URL }}/dists/${{ env.REPOSITORY_DIST }}/!g' Sources) > Packages
 
     - name: Store package laths
       id: links
