--- a/.github/workflows/repackage.yml
+++ b/.github/workflows/repackage.yml
@@ -74,12 +74,18 @@ jobs:
       id: exists
       run: |
         check_exists() {
-          echo "::group::Checking if $1 release item exists"
           url="${{ github.server_url }}/${{ github.repository }}/releases/download/$1"
           echo "$2_url=${url}" >> $GITHUB_OUTPUT
-          (curl -sIL --fail-with-body "${url}" && curl -sIL --fail-with-body "${url}.sha256") &&
-          (echo $2=true >> $GITHUB_OUTPUT) || (echo $2=false >> $GITHUB_OUTPUT)
-          echo "::endgroup::"
+          for postfix in "" ".sha256"; do
+            echo "::group::Checking if $1${postfix} item exists"
+            var="$2$(echo $postfix | tr . _)"
+            if curl -sL -o "$(basename "$1")${postfix}" "${url}${postfix}"; then
+              echo "$var=true" >> $GITHUB_OUTPUT
+            else
+              echo "$var=false" >> $GITHUB_OUTPUT
+            fi
+            echo "::endgroup::"
+          fi
         }
 
         check_exists "${{ steps.vars.outputs.tag }}/${{ steps.vars.outputs.file }}" "version"
@@ -146,38 +152,56 @@ jobs:
       uses: softprops/action-gh-release@v2
       with:
         tag_name: "${{ steps.vars.outputs.tag }}"
-        files: "${{ steps.vars.outputs.file }}*"
+        files: |
+          ${{ steps.vars.outputs.file }}
+          ${{ steps.vars.outputs.file }}.sha256
         make_latest: false
         prerelease: true
+        overwrite: true
         fail_on_unmatched_files: true
 
-    - name: Download release files
-      if: ${{ steps.rebuild.result == 'skipped' }}
+    - name: Download release files (for existing builds)
+      if: ${{ steps.rebuild.result == 'skipped' && steps.exists.outputs.latest == 'false' }}
       run: |
-        curl -fLZ -o '${{ steps.vars.outputs.file }}' '${{ steps.vars.outputs.file }}.sha256' \
+        curl -fLZ -o '${{ steps.vars.outputs.latest }}' '${{ steps.vars.outputs.latest }}.sha256' \
           "${{ steps.exists.outputs.version_url }}" "${{ steps.exists.outputs.version_url }}.sha256"
 
-    - name: Delete latest files
-      if: ${{ steps.rebuild.result != 'skipped' && steps.exists.outputs.latest == 'true' }}
-      uses: flcdrg/remove-release-asset-action@v1
-      env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-          release_id: "${{ env.PERMANENT_RELEASE }}"
-          asset_name: "${{ steps.vars.outputs.latest }}*"
-
-    - name: Rename files
+    - name: Rename files (for new builds)
       if: ${{ steps.rebuild.result != 'skipped' }}
       run: |
         mv '${{ steps.vars.outputs.file }}' '${{ steps.vars.outputs.latest }}'
         mv '${{ steps.vars.outputs.file }}.sha256' '${{ steps.vars.outputs.latest }}.sha256'
 
+    - name: Upload artifacts
+      if: ${{ steps.rebuild.result != 'skipped' || steps.exists.outputs.latest == 'false' }}
+      uses: actions/upload-artifact@v4
+      with:
+        name: ${{ env.RUN_UNIQUE_ID }}_artifacts
+        path: |
+          ${{ steps.vars.outputs.latest }}
+          ${{ steps.vars.outputs.latest }}.sha256
+
+  upload-release:
+    runs-on: ubuntu-latest
+    needs: handle-package
+    steps:
+      - name: Download reports' artifacts
+        uses: actions/download-artifact@v3
+        with:
+          path: artifacts
+
+      - name: Check if any packages uploaded
+        id: exists
+        uses: andstor/file-existence-action@v3
+        with:
+          files: "artifacts/*/*_latest_*.deb*"
+
     - name: Release with latest
-      if: ${{ steps.rebuild.result != 'skipped' }}
+      if: ${{ steps.exists.outputs.files_exists == 'true' }}
       uses: softprops/action-gh-release@v2
       with:
         tag_name: "${{ env.PERMANENT_RELEASE }}"
-        files: "${{ steps.vars.outputs.latest }}*"
+        files: "artifacts/*/*_latest_*.deb*"
+        overwrite: true
         make_latest: true
         prerelease: false
-        fail_on_unmatched_files: true
