--- a/.github/workflows/repackage.yml
+++ b/.github/workflows/repackage.yml
@@ -137,18 +137,9 @@ jobs:
         dpkg -b unpacked "${{ steps.vars.outputs.file }}"
         sha256sum "${{ steps.vars.outputs.file }}" > "${{ steps.vars.outputs.file }}.sha256"
         echo "::endgroup::"
-
-    - name: Delete version files
-      if: ${{ steps.rebuild.result != 'skipped' && steps.exists.outputs.version == 'true' }}
-      uses: flcdrg/remove-release-asset-action@v1
-      env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-          release_id: "${{ steps.vars.outputs.tag }}"
-          asset_name: "${{ steps.vars.outputs.file }}*"
       
-    - name: Release with version
-      if: ${{ github.event_name == 'workflow_dispatch' || steps.exists.outputs.version == 'false' }}
+    - name: Release version tag
+      if: ${{ steps.rebuild.result != 'skipped' }}
       uses: softprops/action-gh-release@v2
       with:
         tag_name: "${{ steps.vars.outputs.tag }}"
