--- a/.github/workflows/repackage.yml
+++ b/.github/workflows/repackage.yml
@@ -2,6 +2,12 @@ name: Repackage UOS/Deepin packages
 
 on:
   workflow_dispatch:
+    inputs:
+      rebuild:
+        description: 'Force package rebuild'
+        required: false
+        type: 'boolean'
+        default: 'true'
   schedule:
     - cron: "0 0 * * *"
 
@@ -50,6 +56,7 @@ jobs:
         # Set the output
         echo "links=$DEB_LINKS_JSON" >> $GITHUB_OUTPUT
 
+
   handle-package:
     runs-on: ubuntu-latest
     needs: download-lists
@@ -92,7 +99,8 @@ jobs:
         check_exists "${{ env.PERMANENT_RELEASE }}/${{ steps.vars.outputs.latest }}" "latest"
 
     - name: Download package from repository
-      if: ${{ github.event_name == 'workflow_dispatch' || steps.exists.outputs.version == 'false' }}
+      if: ${{ (github.event_name == 'workflow_dispatch' && github.event.inputs.rebuild) || steps.exists.outputs.version == 'false' }}
+      id: download
       uses: nick-fields/retry@v3
       with:
         timeout_minutes: 3
@@ -101,7 +109,7 @@ jobs:
 
     - name: Rebuild package
       id: rebuild
-      if: ${{ github.event_name == 'workflow_dispatch' || steps.exists.outputs.version == 'false' }}
+      if: ${{ steps.download.result != 'skipped' }}
       run: |
         echo "::group::Extract package contents to a temporary directory"
         mkdir -p unpacked
@@ -163,14 +171,20 @@ jobs:
         mv '${{ steps.vars.outputs.file }}' '${{ steps.vars.outputs.latest }}'
         mv '${{ steps.vars.outputs.file }}.sha256' '${{ steps.vars.outputs.latest }}.sha256'
 
-    - name: Upload artifacts
+    - name: Retrieve current job ID
+      uses: austenstone/job-id@v1
+      id: job-id
       if: ${{ steps.rebuild.result != 'skipped' || steps.exists.outputs.latest == 'false' }}
+
+    - name: Upload artifacts
+      if: ${{ steps.job-id.result != 'skipped' }}
       uses: actions/upload-artifact@v4
       with:
-        name: ${{ env.RUN_UNIQUE_ID }}_artifacts
+        name: ${{ steps.job-id.outputs.job-id }}_artifacts
         path: |
           ${{ steps.vars.outputs.latest }}
           ${{ steps.vars.outputs.latest }}.sha256
+
 
   upload-release:
     runs-on: ubuntu-latest
